Resolve conflitos entre branches

--- a/MedicalCare/appsettings.json
+++ b/MedicalCare/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    // ConnectionString para  SQL Server e  banco de dados MedicalCareDbContext
+    "DefaultConnection": "Server=DESKTOP-DA6EN1S\\SQLEXPRESS;Database=MedicalCareDbContext;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
