--- a/MedicalCare/appsettings.json
+++ b/MedicalCare/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-DA6EN1S\\SQLEXPRESS;Database=MedicalCareDbContext;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
