--- a/MedicalCare/appsettings.json
+++ b/MedicalCare/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DA6EN1S\\SQLEXPRESS;Database=MedicalCareDbContext;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-HPFKNKH\\SQLEXPRESS;Database=MedicalCareDbContext;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
