--- a/MedicalCare/appsettings.json
+++ b/MedicalCare/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "jwtTokenChave": "dgfdfsstelrkjlijgsrtgpodrtikogfd",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-DA6EN1S\\SQLEXPRESS;Database=MedicalCareDbContext;Trusted_Connection=True;TrustServerCertificate=True;"
   }
