--- a/MedicalCare/appsettings.json
+++ b/MedicalCare/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "jwtTokenChave": "dgfdfsstelrkjlijgsrtgpodrtikogfd",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DA6EN1S\\SQLEXPRESS;Database=MedicalCareDbContext;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-GKSG8G3\\SQLEXPRESS01;Database=MedicalCareDbContext;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
